Fix spacing

--- a/test.css
+++ b/test.css
@@ -20,6 +20,7 @@ body {
 
 #navbar {
     grid-area: 2 / 1 / span 1 / span 3;
+    margin: 0px;
 }
 
 #navbar-content {
@@ -50,10 +51,7 @@ nav i {
     height: 600px;
     background-image: url("images/andromeda-wide.jpg");
     background-position-x: center;
-}
-
-.btn {
-    
+    padding: 1em;
 }
 
 .dropdown-button {
